displaying uprading